// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`set-conversation-retention-seconds Everything is successful Walkthrough passes in the correct arguments to SmoochCore 1`] = `
Array [
  Array [
    Object {
      "keyId": "5e31c81640a22c000f5d7c55",
      "scope": "account",
      "secret": "secret",
      "serviceUrl": "mock-smooch-api-url",
    },
  ],
]
`;

exports[`set-conversation-retention-seconds Everything is successful Walkthrough passes in the correct arguments to docClient.scan() 1`] = `
Array [
  Array [
    Object {
      "TableName": "us-east-1-dev-smooch",
    },
  ],
]
`;

exports[`set-conversation-retention-seconds Everything is successful Walkthrough passes in the correct arguments to secretClient.getSecretValue() to get cx credentials 1`] = `
Array [
  Array [
    Object {
      "SecretId": "us-east-1-dev-smooch-account",
    },
  ],
]
`;

exports[`set-conversation-retention-seconds Everything is successful Walkthrough passes in the correct arguments to smooch.apps.update() 1`] = `
Array [
  Array [
    "5e31c81640a22c000f5d7f28",
    Object {
      "settings": Object {
        "conversationRetentionSeconds": 172800,
      },
    },
  ],
]
`;

exports[`set-conversation-retention-seconds throws an error when there is a error scanning apps in DynamoDB 1`] = `[Error: An Error has occurred trying to fetch apps in DynamoDB]`;

exports[`set-conversation-retention-seconds throws an error when there is a problem updating Smooch appUser 1`] = `[Error: At least one of the apps was unable to update. See logs for details.]`;
